Issue 40250: Deleting module directories breaks module resource loading